<resources>
    <string name="app_name">TaskMaster</string>
    <string name="Lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="date_example">31.12.2023</string>
    <string name="save_button">Save</string>
    <string name="hint_title_task">Text title task</string>
    <string name="hint_category_task">Text category task</string>
    <string name="add_new_task">Добавить новую задачу</string>
    <string name="there_s_nothing_here_yet">There\'s nothing here yet</string>
    <string name="new_category_button">New category</string>
    <string name="category_name">Category name</string>
</resources>