<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/category_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/title_task">

        <TextView
            android:id="@+id/category_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category: "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/category_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/category_textview"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_category_button"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



<!--    <EditText-->
<!--        android:id="@+id/category_task"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title_task"-->
<!--        android:autofillHints="@string/hint_category_task"-->
<!--        android:hint="@string/hint_category_task"-->
<!--        android:inputType="text" />-->

    <EditText
        android:id="@+id/title_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_title_task"
        android:hint="@string/hint_title_task"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_example"
        app:layout_constraintBottom_toBottomOf="@+id/title_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Lorem_ipsum_text"
        app:layout_constraintTop_toBottomOf="@+id/category_linear_layout" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_task" />
</androidx.constraintlayout.widget.ConstraintLayout>